<?xml version="1.0" encoding="utf-8"?><!--
/*
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="sensorgraph_activity">Sensor Graph</string>

    <string name="app_name">Sensorgraph</string>
    <string name="fps">0.0 FPS</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="traffic">Trafic</string>
    <string name="hybrid">Hybrid</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="my_location">My Location</string>
    <string name="buildings">Buildings</string>
    <string name="transparency">Transparency</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
</resources>

